--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -26,3 +26,42 @@
   .btn {
     margin-left: 10px;
   }
+
+  .sidenav-container {
+    height: 100%;
+  }
+    
+  .sidenav-content {
+    padding: 20px;
+  }
+
+  .sidenav {
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .sidenav button {
+    width: 90%;
+    margin: 10px;
+  }
+
+  .sidenav button.selected {
+    background-color: #1976d2; 
+    color: white;
+  }
+
+  .logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+  }
+  
+  .logo-text {
+    font-family: 'Courgette'; 
+    font-size: 24px;
+    font-weight: bold; 
+    color: #333; 
+  }
