--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -1,9 +1,32 @@
-<h2>Company List</h2>
-<div>
-  <input type="text" [(ngModel)]="searchTerm" placeholder="Search by name">
+<!--<p>
+  <mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span>Company List</span>
+      <span class="example-spacer"></span>
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      </button>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</p>-->
+<h2 class="header">Company List</h2>
+<p>
+  <mat-form-field appearance="outline" class="example-spacer">
+    <mat-label>Search</mat-label>
+    <mat-hint>Enter company name</mat-hint>
+    <input matInput [(ngModel)]="searchQuery" name="searchQuery">
+  </mat-form-field>
+  <button mat-raised-button color="primary" type="submit" (click)="searchCompanies()">Search</button>
+</p>
+
+<div *ngIf="isLoading else list" class="loading-screen">
+  <mat-spinner></mat-spinner>
+  <p>Loading...</p>
 </div>
-<ul>
-  <li *ngFor="let company of filteredCompanies()">
-    <a [routerLink]="['/companies', company.id, 'employees']">{{ company.name }}</a>
-  </li>
-</ul>
+<ng-template #list>
+  <mat-list *ngIf="companies.length > 0">
+    <mat-list-item *ngFor="let company of companies">
+      <app-company-card [company]="company"></app-company-card>
+    </mat-list-item>
+  </mat-list>
+  <p class="no-results" *ngIf="companies.length === 0">No companies found.</p>
+</ng-template>
