--- a/frontend/src/app/employee-form/employee-form.component.scss
+++ b/frontend/src/app/employee-form/employee-form.component.scss
@@ -1,15 +1,21 @@
+.container mat-form-field {
+    width: 100%;
+    margin-left: 8px;
+}
 .header {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 16px;
 }
-
-.container mat-form-field {
-    width: 100%;
-    margin-left: 8px;
-}
-
-.loading-screen {
+.button-container {
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .spacer {
+    margin-right: 24px; 
+  }
+  .loading-screen {
     display: flex;
     flex-direction: column;
     align-items: center;
