--- a/frontend/src/app/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee-list/employee-list.component.html
@@ -1,4 +1,5 @@
-<h2>Employees of Company {{ companyId }}</h2>
-<ul>
-  <!-- Here, you can loop over the list of employees for the selected company -->
-</ul>
+<mat-list *ngIf="employees.length > 0">
+  <mat-list-item *ngFor="let employee of employees">
+    <app-employee-card [employee]="employee"></app-employee-card>
+  </mat-list-item>
+</mat-list>
