--- a/frontend/src/app/employee-search/employee-search.component.scss
+++ b/frontend/src/app/employee-search/employee-search.component.scss
@@ -4,10 +4,15 @@
     margin-bottom: 16px;
 }
 
-.container mat-form-field {
-    width: 100%;
-    margin-left: 8px;
+.example-spacer {
+    flex: 1 1 auto;
 }
+
+mat-form-field {
+    width: 90%;
+    margin-right: 16px;
+}
+
 
 .loading-screen {
     display: flex;
@@ -17,10 +22,4 @@
     text-align: center;
   }
 
-  .success-screen {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
+  
