--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,9 +3,10 @@
     <div class="logo-container">
       <h1 class="logo-text">Talent Verify</h1>
     </div>
-    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage === 'add-company'}" (click)="changePage('add-company')">Add Company</button>
-    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage === 'companies'}" (click)="changePage('companies')">View Companies</button>
-    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage === 'employees'}" (click)="changePage('employees')">View Employees</button>
+    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'add-company'}" (click)="changePage('add-company')">Add Company</button>
+    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'companies'}" (click)="changePage('companies')">View Companies</button>
+    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'employees'}" (click)="changePage('employees')">View Employees</button>
+    <button mat-raised-button color="red" [ngClass]="{'selected': currentPage() === 'employees'}" (click)="testAPI()">Test API</button>
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
     <router-outlet></router-outlet>
