--- a/frontend/src/app/company-details/company-details.component.scss
+++ b/frontend/src/app/company-details/company-details.component.scss
@@ -30,7 +30,7 @@ mat-form-field {
   }
   
   .spacer {
-    margin-right: 24px; /* Adjust the margin value as per your spacing preference */
+    margin-right: 24px;
   }
 
   .not-found {
