--- a/frontend/src/app/company-form/company-form.component.html
+++ b/frontend/src/app/company-form/company-form.component.html
@@ -23,7 +23,9 @@
         <mat-form-field  appearance="outline">
           <mat-label>Registration date</mat-label>
           <mat-hint>YYYY-MM-DD</mat-hint>
-          <input matInput formControlName="date_of_registration">
+          <input matInput [matDatepicker]="startDatePicker" formControlName="date_of_registration" readonly="true" required>
+          <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+          <mat-datepicker #startDatePicker></mat-datepicker>
           <mat-error *ngIf="companyForm.get('date_of_registration')?.hasError('required')">Date of Registration is required.</mat-error>
         </mat-form-field>
       </p>
@@ -90,6 +92,12 @@
   <div *ngIf="isSuccess" class="success-screen">
     <mat-icon>check_circle</mat-icon>
     <p>Company added successfully!</p>
+    <button mat-raised-button color="primary" (click)="onOKButtonClicked()">OK</button>
+  </div>
+  <div *ngIf="isError" class="success-screen">
+    <mat-icon>X</mat-icon>
+    <p>Unable to create company</p>
+    <p>{{errorMsg}}</p>
     <button mat-raised-button color="primary" (click)="onOKButtonClicked()">OK</button>
   </div>
 </div>
