--- a/frontend/src/app/company-list/company-list.component.html
+++ b/frontend/src/app/company-list/company-list.component.html
@@ -17,7 +17,12 @@
   </mat-form-field>
   <button mat-raised-button color="primary" type="submit" (click)="searchCompanies()">Search</button>
 </p>
-
+<div class="button-container mat-button-spacing-medium">
+  <div class="spacer"></div>
+  <button mat-raised-button color="primary" (click)="addCompany()">Add Company</button>
+  <div class="spacer"></div>
+  <button mat-raised-button color="primary" (click)="addCompaniesWithCSV()">Add Companies using CSV</button>
+</div>
 <div *ngIf="isLoading else list" class="loading-screen">
   <mat-spinner></mat-spinner>
   <p>Loading...</p>
