--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,41 +5,14 @@
     </div>
     <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'add-company'}" (click)="changePage('add-company')">Add Company</button>
     <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'companies'}" (click)="changePage('companies')">View Companies</button>
+    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'add-company-file'}" (click)="changePage('add-company-file')">Add Companies File</button>
+    <hr/>
     <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'employees'}" (click)="changePage('employees')">View Employees</button>
-    <button mat-raised-button color="red" [ngClass]="{'selected': currentPage() === 'employees'}" (click)="testAPI()">Test API</button>
+    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'search-employee'}" (click)="changePage('search-employee')">Search Employees</button>
+    <button mat-raised-button color="primary" [ngClass]="{'selected': currentPage() === 'add-employee-file'}" (click)="changePage('add-employee-file')">Add Employees File</button>
+    <!--<button mat-raised-button color="red" [ngClass]="{'selected': currentPage() === 'employees'}" (click)="testAPI()">Test API</button>-->
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-<!--<mat-tab-group>
-  <mat-tab label="All Companies">
-    <app-company-list></app-company-list>
-  </mat-tab>
-  <mat-tab label="All Employees">
-    <app-employee-list></app-employee-list>
-  </mat-tab>
-  <mat-tab label="Add Company">
-    <app-company-form></app-company-form>
-  </mat-tab>
-</mat-tab-group>-->
-
-
-<!--<nav class="navbar">
-  <div class="navbar-brand">Company List</div>
-  <button class="btn btn-primary" (click)="openCompanyForm()">New Company</button>
-</nav>
-<div class="company-list">
-  <div class="company-card" *ngFor="let company of companies">
-    <h2>{{ company.name }}</h2>
-    <p>Date of Registration: {{ company.date_of_registration }}</p>
-    <p>Registration Number: {{ company.registration_number }}</p>
-    <p>Address: {{ company.address }}</p>
-    <p>Contact Person: {{ company.contact_person }}</p>
-    <p>Departments: {{ company.departments }}</p>
-    <p>Number of Employees: {{ company.number_of_employees }}</p>
-    <p>Contact Phone: {{ company.contact_phone }}</p>
-    <p>Email: {{ company.email }}</p>
-  </div>
-</div>-->
