--- a/frontend/src/app/company-card/company-card.component.html
+++ b/frontend/src/app/company-card/company-card.component.html
@@ -1,4 +1,4 @@
-<mat-card [routerLink]="['/company', company?.id]" (click)="navigateToCompany()">
+<mat-card (click)="navigateToCompany()">
   <mat-card-header>
     <div mat-card-avatar>
       <mat-icon >business</mat-icon>
