--- a/frontend/src/app/company-list/company-list.component.scss
+++ b/frontend/src/app/company-list/company-list.component.scss
@@ -40,3 +40,13 @@ mat-form-field {
     min-height: 400px; 
   }
   
+  .search-bar-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .search-bar {
+    flex: 1;
+    margin-right: 10px;
+  }
+  
