--- a/frontend/src/app/employee-list/employee-list.component.html
+++ b/frontend/src/app/employee-list/employee-list.component.html
@@ -1,5 +1,5 @@
-<mat-list *ngIf="employees.length > 0">
-  <mat-list-item *ngFor="let employee of employees">
-    <app-employee-card [employee]="employee"></app-employee-card>
+<mat-list *ngIf="roles.length > 0">
+  <mat-list-item *ngFor="let role of roles">
+    <app-employee-card [role]="role"></app-employee-card>
   </mat-list-item>
 </mat-list>
