--- a/frontend/src/app/company-file/company-file.component.html
+++ b/frontend/src/app/company-file/company-file.component.html
@@ -1,20 +1,31 @@
-<h2 class="header">Add companies using text,csv or excel file</h2>
+<h2 class="header">Add companies using text, csv or excel file</h2>
 <div class="button-container mat-button-spacing-medium">
-    <div class="spacer"></div>
-    <button mat-raised-button color="primary">
-        <mat-icon>attach_file</mat-icon>
-        <input type="file" (change)="onFileSelected($event)" accept=".csv, application/vnd.ms-excel, text/plain" style="display:none">
-        Choose File
-    </button>
-    <div class="spacer"></div>
-    <button mat-raised-button color="primary" (click)="onSubmit()">Submit</button>
+  <div class="spacer"></div>
+  <button mat-raised-button color="primary" (click)="openDialog()">Open File</button>
+  <div class="spacer"></div>
+  <button mat-raised-button color="primary" (click)="onSubmit()" [disabled]="cantSubmit()">Submit</button>
+</div>  
+<div *ngIf="isLoading" class="loading-screen">
+  <mat-spinner></mat-spinner>
+  <p>Loading...</p>
 </div>
-<div>
-    <button mat-raised-button color="primary" (click)="openFile()">
-      <mat-icon>attach_file</mat-icon>
-      Choose File
-    </button>
-    <input type="file" style="display: none" #fileInput (change)="handleFileInput(fileInput)">
-  </div>
-  ```
+<div *ngIf="isDetails">
+  <mat-list *ngIf="companies.length > 0">
+    <mat-list-item *ngFor="let company of companies">
+      <app-company-card [company]="company"></app-company-card>
+    </mat-list-item>
+  </mat-list>
+  <p class="no-results" *ngIf="companies.length === 0">No companies found.</p>
+</div>
+<div *ngIf="isSuccess" class="success-screen">
+  <mat-icon>check_circle</mat-icon>
+  <p>Company added successfully!</p>
+  <button mat-raised-button color="primary" (click)="onOKButtonClicked()">OK</button>
+</div>
+<div *ngIf="isError" class="success-screen">
+  <mat-icon color="error">error</mat-icon>
+  <p>Unable to add companies</p>
+  <p>{{errorMsg}}</p>
+  <button mat-raised-button color="primary" (click)="onOKButtonClicked()">OK</button>
+</div>
 
