--- a/frontend/src/app/company-file/company-file.component.scss
+++ b/frontend/src/app/company-file/company-file.component.scss
@@ -15,3 +15,23 @@
   .spacer {
     margin-right: 24px;
   }
+
+  .loading-screen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  mat-list-item {
+    min-height: 400px; 
+  }
+
+  .success-screen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
