--- a/frontend/src/app/employee-file/employee-file.component.html
+++ b/frontend/src/app/employee-file/employee-file.component.html
@@ -1,4 +1,4 @@
-<h2 class="header">Add companies using text, csv or excel file</h2>
+<h2 class="header">Add employees using text, csv or excel file</h2>
 <div class="button-container mat-button-spacing-medium">
   <div class="spacer"></div>
   <button mat-raised-button color="primary" (click)="openDialog()">Open File</button>
